2018-01-20  Bruno Haible  <bruno@clisp.org>

	Fix compilation error in C++ mode on AIX in 32-bit mode.
	* lispbibl.d (INIT_SYMBOL_TAB): Don't define when using g++ on 32-bit
	AIX/PowerPC.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	syscalls: Fix compilation error in C++ mode on AIX.
	* modules/syscalls/calls.c: Don't bind to sethostid() on AIX.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Fix compilation error in C++ mode on AIX.
	* spvw_mmap.d (MINCORE_ADDR_T): New type.
	(mincore_init, is_small_range_unmapped): Use it in the mincore()
	invocations.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Recommend libsigsegv 2.12.
	* configure (libsigsegv_url): Update to 2.12.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Solaris/x86_64.
	* Makefile.devel (multibuild-solaris-x86_64-cc,
	multibuild-solaris-x86_64-gcc): Enable all build variants that work or
	should work.
	* makemake.in (XCFLAGS): For Solaris/x86_64, enable all optimizations
	except ASM.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Solaris/i386.
	* Makefile.devel (multibuild-solaris-i386-cc,
	multibuild-solaris-i386-gcc): Enable all build variants that work or
	should work.
	* makemake.in (XCFLAGS): For Solaris/i386, enable all optimizations
	except ASM.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Solaris/SPARC64.
	* Makefile.devel (multibuild-solaris-sparc64-cc,
	multibuild-solaris-sparc64-gcc): Enable all build variants that work or
	should work.
	* makemake.in (XCFLAGS): For Solaris/SPARC64, enable all optimizations
	except ASM.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Solaris/SPARC.
	* Makefile.devel (multibuild-solaris-sparc-cc,
	multibuild-solaris-sparc-gcc): Enable all build variants that work or
	should work.
	* makemake.in (XCFLAGS): For Solaris/SPARC, enable all optimizations
	except ASM.

2018-01-20  Bruno Haible  <bruno@clisp.org>
